<resources>
	<string name="app_name">Vewec</string>
	<string name="tab_upcoming">Upcoming</string>
	<string name="tab_history">History</string>
	<string name="odometer">Odometer</string>
	<string name="tab_vehicles">Vehicles</string>
	<string name="tab_settings">Settings</string>
	<string name="tab_maintenance_items">Maintenance items</string>
	<string name="kilometer">KM</string>
	<string name="myr">MYR</string>
	<string name="view_service_recommendations">View service recommendations</string>
	<string name="added_on">Added on:</string>
	<string name="registration_no">Registration no.</string>
	<string name="hint_vehicle_reg_no">Vehicle registration number</string>
	<string name="car_editor_title_add_vehicle">Add Vehicle</string>
	<string name="car_editor_title_edit_vehicle">Edit Vehicle</string>
	<string name="action_save">Save</string>
	<string name="action_delete">Delete</string>
	<string name="action_insert_dummy_data">Insert dummy data</string>
	<string name="action_delete_all_entries">Delete all entries</string>
	<string name="action_add_vehicle_brand">Add vehicleTemplate brand</string>
	<string name="action_edit_vehicle_brand">Edit vehicleTemplate brand</string>
	<string name="brand">Brand</string>
	<string name="model">Model</string>
	<string name="manufacturing_year">Manufacturing Year</string>
	<string name="discard">Discard</string>
	<string name="keep_editing">Keep Editing</string>
	<string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="vehicle_brand_required">Brand name is required</string>
	<string name="error_has_occurred">Operation failed. An error has occurred.</string>
	<string name="saved_successfully">Saved successfully</string>
	<string name="added_vehicle_brands">Added vehicleTemplate brands</string>
	<string name="vehicle_deleted">Vehicle deleted</string>
	<string name="vehicle_brand">Vehicle brand</string>
	<string name="add_new">Add new</string>
	<string name="upload_file">Upload file</string>
	<string name="vehicle_template">Vehicle template</string>
	<string name="variant">Variant</string>
	<string name="no_user_vehicle">You have not added any vehicle</string>
	<string name="duplicate_reg_no_message">Vehicle registration number already exists.
		Try again with new registration number.</string>
	<string name="duplicate_record">Duplicate Record</string>
	<string name="close">Close</string>
	<string name="add_odometer">Add odometer</string>
	<string name="edit_odometer">Edit odometer</string>
	<string name="add_vehicle">Add vehicle</string>
	<string name="vehicle">Vehicle</string>
	<string name="date">Date</string>
	<string name="hint_odometer">Odometer reading</string>
	<string name="no_vehicle_found">No vehicle found. Add a vehicle and retry.</string>
	<string name="odometer_not_provided">Odometer value not provided.</string>
	<string name="odometer_deleted">Odometer deleted</string>
	<string name="empty_here">It\'s empty here…</string>
	<string name="add_vehicle_to_get_started">Add a vehicle to get started</string>
	<string name="usage">Usage</string>
	<string name="usage_severe">Severe</string>
	<string name="usage_normal">Normal</string>
	<string name="maintenance_may_vary">Maintenance recommendations by manufacturer may
		vary across different usage type.\nSome examples of severe usage: car sharing
		vehicles, e-hailing vehicles, taxis and delivery vehicles.</string>
	<string name="severe_usage_conditions">
		Severe conditions include but are not limited to the following:\n
		1. Driving on dusty roads or in an area which the vehicle is likely to be exposed to salty air\n
		2. Driving on rough roads, on submerged roads, or hilly areas\n
		3. Engine idling for long periods of time or short distances travelled during cold weather\n
		4. Frequent, suddenly application of brakes\n
		5. Use as rental userVehicle or as a taxi\n
		6. Operation under excessive load\n
		7. More than 50% of operation in heavy city traffic in hot temperature of 32&#176;C or higher\n
		8. Frequent overloading\n
		9. Operation in extremely hot weather condition
	</string>
	<string name="inspect">Inspect</string>
	<string name="replace">Replace</string>
	<string name="odometer_input_too_large">Odometer value too large. Please retry.</string>
	<string name="odometer_input_too_small">Odometer value too small. Please retry.</string>
	<string name="add_maintenance">Add maintenance</string>
	<string name="items_only_save_checked">Items (only checked items will be saved)</string>
	<string name="price">Price</string>
	<string name="remarks">Remarks</string>
	<string name="add_with_symbol">+ Add</string>
	<string name="total">Total</string>
	<string name="item">Item</string>
	<string name="item_name_required">Item name is required</string>
	<string name="add">Add</string>
	<string name="select_one_maintenance_item">Select at least one maintenance item</string>
	<string name="maintenance_item_save_failed">Maintenance item could not be saved</string>
	<string name="maintenance_details_save_failed">Maintenance details could not be saved</string>
	<string name="maintenance_deleted">Maintenance record deleted</string>
	<string name="total2">Total:</string>
	<string name="item_already_exists">Item already exists</string>
	<string name="every">Every</string>
	<string name="left">left</string>
	<string name="or">or</string>
	<string name="months">months</string>
	<string name="on">on</string>
	<string name="whichever_comes_first">Whichever comes first</string>
	<string name="title_activity_ad_test">AdActivityTest</string>
	<string name="nav_settings">Settings</string>
	<string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
	<string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
	<string name="title_activity_settings">Settings</string>
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails
	</string>
	<string name="attachment_summary_off">
		Only download attachments when manually requested</string>
	<string name="pref_key_start_upcoming_maintenance_from">
		start_upcoming_maintenance_from</string>
	<string name="custom_maintenance_item">Custom maintenance item</string>
	<string name="start_maintenance_recommendation_from">
		Start maintenance recommendation from (KM):</string>
	<string name="add_item">Add item</string>
	<string name="item_name">Item name</string>
	<string name="duration_interval_month">Duration interval (month)</string>
	<string name="distance_interval_km">Distance interval (KM)</string>
	<string name="first_distance">First distance</string>
	<string name="first_duration">First duration</string>
	<string name="months_cap">Months</string>
	<string name="replace_or_inspect">Replace / Inspect</string>
	<string name="all_inputs_required">All inputs are required.</string>
	<string name="item_deleted">Item deleted</string>
	<string name="select_by_template">Select by template</string>
	<string name="dollar_sign">$$</string>
	<string name="edit">Edit</string>
	<string name="by_distance_interval">By distance interval</string>
	<string name="by_duration_interval">By duration interval</string>
	<string name="current_odometer">Current odometer:</string>
	<string name="interval_label">Interval:</string>
	<string name="vertical_separator">|</string>
	<string name="notifications">Notifications</string>
	<string name="default_notification_time">07:00</string>
	<string name="skip">Skip</string>
	<string name="which_maintenance_template">Which maintenance are you performing?</string>
	<string name="_0_00">0.00</string>
	<string name="no_internet_connection">No internet connection</string>
	<string name="icon">icon</string>
	<string name="next">Next</string>
	<string name="get_started_string2">Let\'s get started by adding a vehicle</string>
	<string name="get_started_string1">Hi! Thanks for using Vewec to
		manage your car maintenance.</string>
	<string name="skip_tutorial_question">Skip tutorial?</string>
	<string name="continue_r">continue</string>
	<string name="get_started_upcoming_msg0">All your vehicle\'s maintenance items defined by
		your car\'s manufacturer are shown here with their respective distance and duration
		left until next maintenance.</string>
	<string name="get_started_upcoming_msg1">You can add custom items under
		\"Custom Maintenance Item\" menu.</string>
	<string name="get_started_upcoming_msg3">Duration left calculations start from
		item\'s latest service record.</string>
	<string name="got_it">Got it</string>
	<string name="pref_get_started">get_started</string>
	<string name="pref_upcoming_intro">upcoming_intro</string>
	<string name="pref_odo_update_notification_day">pref_odo_update_notification_day</string>
	<string name="pref_odo_update_notification_time">pref_odo_update_notification_time</string>
	<string name="pref_session_vehicle">pref_session_vehicle</string>
	<string name="quit">Quit</string>
	<string name="previous">Previous</string>
	<string name="clear_preferences">Clear preferences</string>
	<string name="no_brand_model_variant_contact_us">Do not find your vehicle\'s
		brand-model-variant? <u>Let us know</u>.</string>
	<string name="sunday">Sunday</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="update_odo_day_label">Notification to update odometer every</string>
	<string name="update_odo_time_label">Notification to update odometer at</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="brand_new_vehicle_label">Brand new vehicle (no service or maintenance
		performed before)</string>
	<string name="update_odometer_reminder_notification">
		update_odometer_reminder_notification</string>
	<string name="update_odometer_reminder">Update odometer reminder</string>
	<string name="unable_to_open_link">Unable to open link.</string>
	<string name="add_maintenance_item">Add maintenance item</string>
	<string name="tips">Tips</string>
	<string name="odometer_editor_tips">Make sure your odometer is displaying total
		distance travelled by ensuring your odometer displays \"ODO\" near the
		distance travelled.</string>
	<string name="find_out_model_variant_title">
		Finding out your vehicle\'s model and variant</string>
	<string name="vehicle_registration_card">Vehicle Registration Card</string>
	<string name="find_out_model_variant_method1">
		<u>Method 1: Vehicle Registration Card (RC) or Vehicle Ownership Certificate (VOC)</u>
	</string>
	<string name="find_out_model_variant_method2"><u>Method 2: Back of your vehicle</u>
	</string>
	<string name="find_out_model_variant_method1_desc">Depending on when you register your
		vehicle, you will either have RC or VOC issued by Road Transport Department (JPJ).
		These documents contain information of your vehicle\'s model and variant.</string>
	<string name="find_out_model_variant_method2_desc">For some vehicles, information
		of variant may be obtained by looking at the back of the vehicle.</string>
	<string name="vehicle_ownership_certificate">Vehicle Ownership Certificate</string>
	<string name="back_of_vehicle">Back of vehicle</string>
	<string name="menu_home">Home</string>
	<string name="fuel_prices">Fuel prices</string>
	<string name="fuel">Fuel</string>
	<string name="litre">L</string>
	<string name="volume">Volume</string>
	<string name="full_tank">Full tank</string>
	<string name="news">News</string>
</resources>