<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sunday" />

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/monday" />

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tuesday" />

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/wednesday" />

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/thursday" />

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/friday" />

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/saturday" />

</LinearLayout>