<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">
	<group android:checkableBehavior="none">
		<item
			android:id="@+id/nav_home"
			android:visible="false"
			android:icon="@drawable/ic_home_grey_24dp"
			android:title="@string/menu_home" />
		<item
			android:id="@+id/nav_fuel_price"
			android:icon="@drawable/ic_gas_station_grey_24dp"
			android:title="@string/fuel_prices" />
		<item
			android:id="@+id/nav_news"
			android:icon="@drawable/ic_menu_book_grey_24"
			android:title="@string/news" />
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_settings_grey_24dp"
			android:title="@string/nav_settings" />
<!--		<item-->
<!--			android:id="@+id/nav_help"-->
<!--			android:icon="@drawable/ic_help_grey_24"-->
<!--			android:title="@string/help" />-->
<!--		<item-->
<!--			android:id="@+id/nav_share"-->
<!--			android:icon="@drawable/ic_settings_grey_24dp"-->
<!--			android:title="@string/share" />-->
	</group>
</menu>