<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory app:title="@string/notifications">
		<!--		<SwitchPreferenceCompat-->
		<!--			app:key="get_notifications"-->
		<!--			app:title="Get notifications" />-->
		<!--		<EditTextPreference-->
		<!--			android:dialogLayout="@layout/dialog_pref_update_odo_day"-->
		<!--			android:textAllCaps="true"-->
		<!--			app:defaultValue="@string/friday"-->
		<!--			app:key="@string/pref_odo_update_notification_day"-->
		<!--			app:title="Notify me to update odometer every"-->
		<!--			app:useSimpleSummaryProvider="true" />-->
		<com.incupe.vewec.fragments.PrefUpdateOdoDayFragment
			android:dialogLayout="@layout/dialog_pref_update_odo_day"
			android:negativeButtonText="@android:string/cancel"
			android:positiveButtonText="@android:string/ok"
			android:textAllCaps="true"
			app:defaultValue="@string/friday"
			app:key="@string/pref_odo_update_notification_day"
			app:title="Notify me to update odometer every"
			app:useSimpleSummaryProvider="true" />
		<EditTextPreference
			app:defaultValue="@string/default_notification_time"
			app:key="@string/pref_odo_update_notification_time"
			app:title="Notify me to update odometer at"
			app:useSimpleSummaryProvider="true" />
	</PreferenceCategory>
	<CheckBoxPreference
		app:defaultValue="true"
		app:isPreferenceVisible="false"
		app:key="@string/pref_get_started"
		app:title="@string/pref_get_started"
		app:useSimpleSummaryProvider="true" />
	<CheckBoxPreference
		app:defaultValue="true"
		app:isPreferenceVisible="false"
		app:key="@string/pref_upcoming_intro" />

	<!--	<PreferenceCategory app:title="@string/sync_header">-->

	<!--		<SwitchPreferenceCompat-->
	<!--			app:key="sync"-->
	<!--			app:title="@string/sync_title" />-->

	<!--		<SwitchPreferenceCompat-->
	<!--			app:dependency="sync"-->
	<!--			app:key="attachment"-->
	<!--			app:summaryOff="@string/attachment_summary_off"-->
	<!--			app:summaryOn="@string/attachment_summary_on"-->
	<!--			app:title="@string/attachment_title" />-->

	<!--	</PreferenceCategory>-->
	<!--	<EditTextPreference-->
	<!--		android:inputType="number"-->
	<!--		app:defaultValue="0"-->
	<!--		app:key="@string/pref_key_start_upcoming_maintenance_from"-->
	<!--		app:title="Start maintenance recommendation from (KM):"-->
	<!--		app:useSimpleSummaryProvider="true" />-->
	<!--	<CheckBoxPreference-->
	<!--		app:isPreferenceVisible="false"-->
	<!--		android:inputType="number"-->
	<!--		app:defaultValue="0"-->
	<!--		app:key="test"-->
	<!--		app:title="Start maintenance recommendation from (KM):"-->
	<!--		app:useSimpleSummaryProvider="true" />-->
</PreferenceScreen>
