<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	android:padding="32dp"
	tools:context=".GetStartedActivity">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:gravity="center"
		android:orientation="vertical">

		<TextView
			android:id="@+id/welcome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:text="@string/get_started_string1"
			android:textAlignment="center"
			android:textAppearance="?android:textAppearanceLarge"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/txt2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/get_started_string2"
			android:textAlignment="center"
			android:textAppearance="?android:textAppearanceLarge"
			android:textColor="@color/white" />

		<Button
			android:id="@+id/btn_next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/next" />
	</LinearLayout>

	<Button
		android:id="@+id/btn_skip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:text="@string/skip" />

</RelativeLayout>