<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/pref_update_odo_day"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/update_odo_day_label"
			android:textColor="@android:color/black" />

		<TextView
			android:id="@+id/txt_update_odo_day"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:textAppearanceSmall"
			tools:text="@string/friday" />
	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:color/darker_gray" />

	<LinearLayout
		android:id="@+id/pref_update_odo_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/update_odo_time_label"
			android:textColor="@android:color/black" />

		<TextView
			android:id="@+id/txt_update_odo_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:textAppearanceSmall"
			tools:text="@string/default_notification_time" />
	</LinearLayout>
</LinearLayout>